--- a/html/index.html
+++ b/html/index.html
@@ -14,9 +14,35 @@
         Merhaba ben Kadir Erman. Bursa'da yaşıyorum. Kütahya Dumlupınar Üniversitesi Bilgisayar Mühendisliği bölümünde okuyorum.
     </p>
 
+    <h2>İlgi Alanlarım</h2>
+    <ul>
+        <li>Dizi</li>
+        <ul>
+            <li>Prison Break</li>
+            <li>This Is Us</li>
+        </ul>
+        <li>Kitap</li>
+        <ul>
+            <li>Momo</li>
+            <li>Bir Ömür Nasıl Yaşanır?</li>
+            <li>Her Şey Seninle Başlar <small><a href="http://goodreads.com/book/show/10402479-her-ey-seninle-ba-lar" target="_blank">goodreads</a></small></li>
+        </ul>
+    </ul>
+
     <h2>Sevdiğim Diziler</h2>
     <h3>Prison Break</h3>
+    <p>
+        <a href="https://www.imdb.com/title/tt0455275/" target="_blank">IMDB:</a>: 8,3/10
+    </p>
+    <img src="https://www.indyturk.com/sites/default/files/styles/1368x911/public/article/main_image/2020/11/22/514956-875711396.jpg?itok=wAcxg156" width="700px">
+
+    <br><br>
+
     <h3>This Is Us</h3>
+    <p>
+        <a href="https://www.imdb.com/title/tt5555260/" target="_blank">IMDB:</a>: 8,7/10
+    </p>
+    <img src="https://images-na.ssl-images-amazon.com/images/I/91s3e0KG4gL._RI_.jpg" width="700px">
     
 </body>
 </html>
